__author__ = 'pascalpoizat'

import os
from pyArduinoML.model.NamedElement import NamedElement


class App(NamedElement):
    """
    Application built over bricks.

    """

    def __init__(self, name, bricks=(), states=()):
        """
        Constructor.

        :param name: String, the name of the application
        :param bricks: List[Brick], bricks over which the application operates
        :param states: List[State], states of the application with the first one being the initial state
        :return:
        """
        NamedElement.__init__(self, name)
        self.bricks = bricks
        self.states = states

    def __repr__(self):
        """
        External representation: Arduino program

        :return: String
        """

        rtr = """// generated by ArduinoML

%s

void setup() {
%s
}

int state = LOW; int prev = HIGH;
long time = 0; long debounce = 200;

%s
void loop() { state_%s(); }""" % ("\n".join(map(lambda b: b.declare(), self.bricks)),
                                  "\n".join(map(lambda b: b.setup(), self.bricks)),
                                  "\n".join(map(lambda s: s.setup(), self.states)),
                                  self.states[0].name)
        return rtr

    def save(self, output_dir=None):
        """
        Saves the generated Arduino code to a .ino file.

        :param output_dir: String, directory where to save the file (default: demo/generated)
        :return: String, path to the saved file
        """
        if output_dir is None:
            # Get the project root (3 levels up from this file)
            current_dir = os.path.dirname(os.path.abspath(__file__))
            project_root = os.path.dirname(os.path.dirname(current_dir))
            output_dir = os.path.join(project_root, "demo", "generated")

        # Create directory if it doesn't exist
        if not os.path.exists(output_dir):
            os.makedirs(output_dir)

        # Generate filename from app name
        filename = self.name.replace("!", "").replace(" ", "_") + ".ino"
        filepath = os.path.join(output_dir, filename)

        # Write the Arduino code to file
        with open(filepath, 'w') as f:
            f.write(str(self))

        return filepath
